--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "name": "(lldb) Launch",
-        "type": "lldb",
-        "request": "launch",
-        "program": "${workspaceFolder}/TP/${fileBasenameNoExtension}",
-        "args": [],
-        "cwd": "${fileDirname}",
-        "environment": [],
-        "externalConsole": false,
-        "MIMode": "lldb"
-    }
+        {
+            "name": "Debug for C",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${workspaceFolder}/TP/${fileBasenameNoExtension}",
+            "args": [],
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb"
+        }
     ]
 }
